--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -2,25 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Place Order</title>
+    <title>Condelu Meals</title>
     <!--<link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">-->
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles/order.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
     <script src="/js/header.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/item_cart_handling.js"></script>
+
+    <script src="/js/account.js"></script>
+    <link rel="stylesheet" href="/styles/account.css">
+
+    <script src="/js/menu.js"></script>
+    <link rel="stylesheet" href="/styles/menu.css">
+
     <script src="/js/order.js"></script>
+    <link rel="stylesheet" href="/styles/order.css">
+
+    <script src="/js/signon.js"></script>
+    <link rel="stylesheet" href="/styles/signon.css">
+
+    <script src="/js/view_cart.js"></script>
+    <link rel="stylesheet" href="/styles/viewcart.css">
+
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        let account = /*[[${account}]]*/ 'noaccount';
-        /*]]>*/
-    </script>
+    <script src="https://unpkg.com/@barba/core" type="text/javascript"></script>
 </head>
-<body>
+<body data-barba="wrapper">
+
+<script src="/js/barba_config.js"></script>
+
+
 
 <div id="header-container">
     <div id="header-link-container">
@@ -29,6 +46,7 @@
         <a href="/cart" style="display: none;">Order</a>
         <a href="/account" style="display: none;">Account</a>
         <a href="/#collaborate-container" style="display: none;">Careers</a>
+        <a href="/reference_page" style="display:none;">Reference Page</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
         <a class="header-no-remove" href="/cart">
             <i class="fa-solid fa-cart-shopping"></i>
@@ -53,148 +71,152 @@
     <a href="/cart"><h1>Order</h1></a>
     <a href="/account"><h1>Account</h1></a>
     <a href="/#collaborate-container"><h1>Careers</h1></a>
+    <a href="/reference_page"><h1>Reference Page</h1></a>
 </div>
 
 
-<div id="site-content">
-    <!--
-    Start with the input of a location for the order, delivery or pick up or dine in.
-    Then have the billing info. If they have an account, fill it automatically. Else, mention that an account can speed up orders.
-    After that, finalize the order.
-    -->
-    <div id="location-container">
-        <div id="location-float-align">
-            <div id="location-type-selection">
-                <h2 id="location-type-header">How do you want to order?</h2>
-                <div id="location-options">
-                    <h5 class="loc-type-selectable picked" onclick="onSelectLocationType('Delivery')">Delivery</h5>
-                    <h5 class="loc-type-selectable" onclick="onSelectLocationType('Pickup')">Pickup</h5>
-                    <h5 class="loc-type-selectable" onclick="onSelectLocationType('Dine-In')">Dine-In</h5>
+
+<div id="barba-container" data-barba="container" data-barba-namespace="order">
+    <div id="site-content-order">
+        <!--
+        Start with the input of a location for the order, delivery or pick up or dine in.
+        Then have the billing info. If they have an account, fill it automatically. Else, mention that an account can speed up orders.
+        After that, finalize the order.
+        -->
+        <div id="location-container">
+            <div id="location-float-align">
+                <div id="location-type-selection">
+                    <h2 id="location-type-header">How do you want to order?</h2>
+                    <div id="location-options">
+                        <h5 class="loc-type-selectable picked" onclick="onSelectLocationType('Delivery')">Delivery</h5>
+                        <h5 class="loc-type-selectable" onclick="onSelectLocationType('Pickup')">Pickup</h5>
+                        <h5 class="loc-type-selectable" onclick="onSelectLocationType('Dine-In')">Dine-In</h5>
+                    </div>
                 </div>
-            </div>
-            <div id="location-address-selection">
-                <!-- Delivery should have user directly enter their address. Otherwise, user can see a list of addresses.
-                TODO: Option to input zip code and sort by distance.
-                -->
-                <div id="enter-address" style="display: flex;">
-                    <label for="target-address-text-input" id="address-enter-label">Enter Delivery Address: </label>
-                    <input type="text" id="target-address-text-input">
-                </div>
-                <div id="select-address-from-list" style="display: none;">
-                    <h2 id="location-selection-header">Select Location</h2>
-                    <div class="location-tile" th:each="location:${locations}" onclick="selectLocation(this)">
-                        <p class="location-address" th:text="${location.getAddressLine()}"></p>
-                        <p class="location-city" th:text="${location.getCity()}"></p>
-                        <p class="location-state" th:text="${location.getState()}"></p>
-                        <p class="location-zip" th:text="${location.getZipCode()}"></p>
+                <div id="location-address-selection">
+                    <!-- Delivery should have user directly enter their address. Otherwise, user can see a list of addresses.
+                    feature: Option to input zip code and sort by distance.
+                    -->
+                    <div id="enter-address" style="display: flex;">
+                        <label for="target-address-text-input" id="address-enter-label">Enter Delivery Address: </label>
+                        <input type="text" id="target-address-text-input">
+                    </div>
+                    <div id="select-address-from-list" style="display: none;">
+                        <h2 id="location-selection-header">Select Location</h2>
+                        <div class="location-tile" th:each="location:${locations}" onclick="selectLocation(this)">
+                            <p class="location-address" th:text="${location.getAddressLine()}"></p>
+                            <p class="location-city" th:text="${location.getCity()}"></p>
+                            <p class="location-state" th:text="${location.getState()}"></p>
+                            <p class="location-zip" th:text="${location.getZipCode()}"></p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="location-proceed-button">
-            <button onclick="submitLocation()">
-                Continue
-            </button>
-        </div>
-    </div>
-
-
-    <div id="billing-info-container" style="display: none;">
-        <h2>Billing Info</h2>
-        <div id="billing-input">
-            <div id="billing-name-container" class="billing-data">
-                <label id="billing-name-label" class="label-billing">
-                    Name on Card
-                </label>
-                <input type="text" id="billing-name-input" autocomplete="cc-name">
-            </div>
-            <div id="billing-address-container" class="billing-data">
-                <label id="billing-address-label" class="label-billing">
-                    Address
-                </label>
-                <input type="text" id="billing-address-input" autocomplete="street-address">
-            </div>
-            <div class="side-by-side">
-                <div id="billing-city-container" class="billing-data">
-                    <label id="billing-city-label" class="label-billing">
-                        City
-                    </label>
-                    <input type="text" id="billing-city-input" autocomplete="address-level2">
-                </div>
-                <div id="billing-state-container" class="billing-data">
-                    <label id="billing-state-label" class="label-billing">
-                        State
-                    </label>
-                    <input type="text" id="billing-state-input" autocomplete="address-level1">
-                </div>
-            </div>
-            <div class="side-by-side">
-                <div id="billing-country-container" class="billing-data">
-                    <label id="billing-country-label" class="label-billing">
-                        Country
-                    </label>
-                    <input type="text" id="billing-country-input" autocomplete="country-name">
-                </div>
-                <div id="billing-zip-container" class="billing-data">
-                    <label id="billing-zip-label" class="label-billing">
-                        Zip
-                    </label>
-                    <input type="text" id="billing-zip-input" autocomplete="postal-code">
-                </div>
-            </div>
-            <div id="billing-phone-container" class="billing-data">
-                <label id="billing-phone-label" class="label-billing">
-                    Phone
-                </label>
-                <input type="text" id="billing-phone-input" autocomplete="tel">
-            </div>
-            <div id="billing-cardnum-container" class="billing-data">
-                <label id="billing-cardnum-label" class="label-billing">
-                    Card #
-                </label>
-                <input type="text" id="billing-cardnum-input" autocomplete="cc-number">
-            </div>
-            <div class="side-by-side">
-                <div id="billing-expdate-container" class="billing-data">
-                    <label id="billing-expdate-label" class="label-billing">
-                        Expiration Date
-                    </label>
-                    <input type="text" id="billing-expdate-input" autocomplete="cc-exp">
-                </div>
-                <div id="billing-seccode-container" class="billing-data">
-                    <label id="billing-seccode-label" class="label-billing">
-                        Security Code
-                    </label>
-                    <input type="text" id="billing-seccode-input" autocomplete="cc-csc">
-                </div>
+            <div id="location-proceed-button">
+                <button onclick="submitLocation()">
+                    Continue
+                </button>
             </div>
         </div>
-        <button onclick="finalizeOrder()">Place Order</button>
-    </div>
 
 
-    <div id="finalize-order-container" style="display: none;">
-        <div id="final-order-info-display">
-            <h1>Thanks for shopping with us!</h1>
-            <h3>Your order is being prepared.</h3>
-            <div><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
-        </div>
-        <div id="general-rating-panel">
-            <h4 id="rating-order-header">Rate Your Experience</h4>
-            <div id="gen-rating-selection" class="rating-container" data-chosenrating="null">
-                <i class="fa-solid fa-star rate-star-icon" data-rating="1" onclick="generalRating(this);"></i>
-                <i class="fa-solid fa-star rate-star-icon" data-rating="2" onclick="generalRating(this);"></i>
-                <i class="fa-solid fa-star rate-star-icon" data-rating="3" onclick="generalRating(this);"></i>
-                <i class="fa-solid fa-star rate-star-icon" data-rating="4" onclick="generalRating(this);"></i>
-                <i class="fa-solid fa-star rate-star-icon" data-rating="5" onclick="generalRating(this);"></i>
+        <div id="billing-info-container" style="display: none;">
+            <h2>Billing Info</h2>
+            <div id="billing-input">
+                <div id="billing-name-container" class="billing-data">
+                    <label id="billing-name-label" class="label-billing">
+                        Name on Card
+                    </label>
+                    <input type="text" id="billing-name-input" autocomplete="cc-name">
+                </div>
+                <div id="billing-address-container" class="billing-data">
+                    <label id="billing-address-label" class="label-billing">
+                        Address
+                    </label>
+                    <input type="text" id="billing-address-input" autocomplete="street-address">
+                </div>
+                <div class="side-by-side">
+                    <div id="billing-city-container" class="billing-data">
+                        <label id="billing-city-label" class="label-billing">
+                            City
+                        </label>
+                        <input type="text" id="billing-city-input" autocomplete="address-level2">
+                    </div>
+                    <div id="billing-state-container" class="billing-data">
+                        <label id="billing-state-label" class="label-billing">
+                            State
+                        </label>
+                        <input type="text" id="billing-state-input" autocomplete="address-level1">
+                    </div>
+                </div>
+                <div class="side-by-side">
+                    <div id="billing-country-container" class="billing-data">
+                        <label id="billing-country-label" class="label-billing">
+                            Country
+                        </label>
+                        <input type="text" id="billing-country-input" autocomplete="country-name">
+                    </div>
+                    <div id="billing-zip-container" class="billing-data">
+                        <label id="billing-zip-label" class="label-billing">
+                            Zip
+                        </label>
+                        <input type="text" id="billing-zip-input" autocomplete="postal-code">
+                    </div>
+                </div>
+                <div id="billing-phone-container" class="billing-data">
+                    <label id="billing-phone-label" class="label-billing">
+                        Phone
+                    </label>
+                    <input type="text" id="billing-phone-input" autocomplete="tel">
+                </div>
+                <div id="billing-cardnum-container" class="billing-data">
+                    <label id="billing-cardnum-label" class="label-billing">
+                        Card #
+                    </label>
+                    <input type="text" id="billing-cardnum-input" autocomplete="cc-number">
+                </div>
+                <div class="side-by-side">
+                    <div id="billing-expdate-container" class="billing-data">
+                        <label id="billing-expdate-label" class="label-billing">
+                            Expiration Date
+                        </label>
+                        <input type="text" id="billing-expdate-input" autocomplete="cc-exp">
+                    </div>
+                    <div id="billing-seccode-container" class="billing-data">
+                        <label id="billing-seccode-label" class="label-billing">
+                            Security Code
+                        </label>
+                        <input type="text" id="billing-seccode-input" autocomplete="cc-csc">
+                    </div>
+                </div>
             </div>
+            <button onclick="finalizeOrder()">Place Order</button>
         </div>
-        <div id="order-review-panel" th:if="${!account.equals('noaccount')}">
-            <i class="fa-solid fa-arrow-down fa-beat"></i>
-            <div id="order-items-review-container">
 
+
+        <div id="finalize-order-container" style="display: none;">
+            <div id="final-order-info-display">
+                <h1>Thanks for shopping with us!</h1>
+                <h3>Your order is being prepared.</h3>
+                <div><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
             </div>
-            <button onclick="submitFeedback()">Send Feedback</button>
+            <div id="general-rating-panel">
+                <h4 id="rating-order-header">Rate Your Experience</h4>
+                <div id="gen-rating-selection" class="rating-container" data-chosenrating="null">
+                    <i class="fa-solid fa-star rate-star-icon" data-rating="1" onclick="generalRating(this);"></i>
+                    <i class="fa-solid fa-star rate-star-icon" data-rating="2" onclick="generalRating(this);"></i>
+                    <i class="fa-solid fa-star rate-star-icon" data-rating="3" onclick="generalRating(this);"></i>
+                    <i class="fa-solid fa-star rate-star-icon" data-rating="4" onclick="generalRating(this);"></i>
+                    <i class="fa-solid fa-star rate-star-icon" data-rating="5" onclick="generalRating(this);"></i>
+                </div>
+            </div>
+            <div id="order-review-panel" th:if="${!account.equals('noaccount')}">
+                <i class="fa-solid fa-arrow-down fa-beat"></i>
+                <div id="order-items-review-container">
+
+                </div>
+                <button onclick="submitFeedback()">Send Feedback</button>
+            </div>
         </div>
     </div>
 </div>
